projetos/local/nexus-backoffice-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-backoffice-api-route
  namespace: nexus-backoffice-api
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: tech-https
  hostnames:
  - "backoffice-api.tech.nexusplatform.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nexus-backoffice-api-service
      port: 80
